--- a/action.yaml
+++ b/action.yaml
@@ -1,37 +1,37 @@
 name: rode-env
 author: rode@liatrio.com
-description: A test environment with Rode and its dependencies
+description: A test environment for Rode and its components
 branding:
   icon: anchor
   color: green
 
 inputs:
   rodeVersion:
-    description: Rode version
+    description: 'Rode version. Set this value to 'local' to skip initializing Rode.'
     required: true
     default: "0.14"
   elasticsearchVersion:
-    description: Rode version
+    description: 'Elasticsearch Docker image tag.'
     required: true
     default: "7.10.0"
   grafeasVersion:
-    description: Rode version
+    description: 'Grafeas Elasticsearch Docker image tag.'
     required: true
     default: "0.8"
   opaVersion:
-    description: Rode version
+    description: 'Open Policy Agent Docker image tag.'
     required: true
     default: "0.24.0"
 
 outputs:
   rodeHost:
-    description: Rode Host
+    description: 'Rode hostname and port. No protocol.'
   elasticsearchUrl:
-    description: Rode Host
+    description: 'Elasticsearch URL.'
   grafeasElasticsearchHost:
-    description: Rode Host
+    description: 'Grafeas Elasticsearch host and port. No protocol.'
   opaUrl:
-    description: Rode Host
+    description: 'Open Policy Agent URL.'
 
 runs:
   using: node12
