Upload logs, support local Rode, & add dev instructions

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -18,7 +18,7 @@ jobs:
       - name: Build
         id: build
         run: |
-          ./build.sh
+          ./scripts/build.sh
       - name: Commit Bundle & Tag Release
         run: |
           set -eu
