Quote oidc provider paths filter

--- a/.github/workflows/oidc-provider.yaml
+++ b/.github/workflows/oidc-provider.yaml
@@ -5,8 +5,8 @@ on:
     branches:
       - main
     paths:
-      - oidc/**
-      - .github/workflows/oidc-provider.yaml
+      - 'oidc/**'
+      - '.github/workflows/oidc-provider.yaml'
 
 jobs:
   build:
